use meta keys to track stream state
